--- a/KnockAndCheckHF/KnockAndCheckHF.csproj
+++ b/KnockAndCheckHF/KnockAndCheckHF.csproj
@@ -312,6 +312,7 @@
     <Content Include="Views\Survey\WHO5.cshtml" />
     <Content Include="Views\Survey\DSSI.cshtml" />
     <Content Include="Views\Survey\Checkup.cshtml" />
+    <Content Include="Views\Survey\ViewSurvey.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
